--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "mkdir -p dist && cp src/index.html dist/index.html &&  webpack",
-    "clean": "rm -r -f dist/",
-    "buildAll": "npm run clean && npm run build"
+    "build": "webpack",
+    "clean": "rm -r -f dist/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "csv-loader": "^3.0.3",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
