--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -r -f dist && webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "clean": "rm -r -f dist/"
   },
   "keywords": [],
@@ -20,6 +22,7 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
