--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "csv-loader": "^3.0.3",
+    "exports-loader": "^0.7.0",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -30,6 +31,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "babel-polyfill": "^6.26.0",
+    "lodash": "^4.17.15",
+    "whatwg-fetch": "^3.0.0"
   }
 }
