--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -r -f dist && webpack",
     "watch": "webpack --watch",
+    "startHttp": "http-server dist",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
     "clean": "rm -r -f dist/"
@@ -21,11 +22,13 @@
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "http-server": "^0.12.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.3",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
